changes after the class

--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
     <section>
       <article>
         <h2 style="text-align:center;">Getting Started</h2>
-        <p>Want to Learn Pokeman GO? We have lots of Tips and Tricks to help even the novice nagivate through the new popular game.
+        <p>What is this Pokemon Go you say? Follow the steps below to find out.
          
         </p>
         <p></p>
         <ul style="text-align:center;">
-          <li> 1.Download the app</li>
-          <li> 2.Make Account</li>
-          <li> 3.Check out all of our
+          <li> Download the app from <a href= "https://play.google.com/store/apps/details?id=com.nianticlabs.pokemongo">Google</a> or <a href="https://itunes.apple.com/us/app/pokemon-go/id1094591345?mt=8">Apple</a>
+
+          </li>
+          <li> Make Account</li>
+          <li> Check out all of our
              <a href="tipsandtricks.html">Tips and Tricks
              </a>
           </li>
@@ -44,6 +46,7 @@
     </aside>
     <footer>
       <p>Happy Playing!</p>
+      <p>This wesite is for educatioanl training purposes.cf_code101 class 2016 </p>
     </footer>
   </body>
 </html>
